<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="football_scores_app">Footbal Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger_app">Build It Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="capstone_app">Capstone</string>


    <string name="spotify_launch_toast">This button will launch the Spotify App!</string>
    <string name="footbal_launch_toast">This button will launch the Football Scores App!</string>
    <string name="library_launch_toast">This button will launch the Library  App!</string>
    <string name="build_it_bigger_launch_toast">This button will launch the Build it Bigger  App!</string>
    <string name="xyz_reader_launch_toast">This button will launch the XYZ Reader App!</string>
    <string name="capstone_launch_toast">This button will launch the Capstone App!</string>


</resources>
