<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView android:id="@+id/app_title"
            android:text="@string/app_title" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/appTitleStyle"
            />
        <Button
            android:id="@+id/spotify_button"
            android:text="@string/spotify_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_title"
            style="@style/appButtonStyle"
            />

        <Button android:id="@+id/football_scores_button"
            android:text="@string/football_scores_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spotify_button"
            style="@style/appButtonStyle"
            />
        <Button android:id="@+id/library_button"
            android:text="@string/library_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/football_scores_button"
            style="@style/appButtonStyle"

            />
        <Button android:id="@+id/build_it_bigger_button"
            android:text="@string/build_it_bigger_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/library_button"
            style="@style/appButtonStyle"
            />
        <Button android:id="@+id/xyz_reader_button"
            android:text="@string/xyz_reader_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/build_it_bigger_button"
            style="@style/appButtonStyle"
            />

        <Button android:id="@+id/capstone_button"
            android:text="@string/capstone_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/xyz_reader_button"
            style="@style/capstoneAppButtonStyle"
            />
     </RelativeLayout>
</RelativeLayout>
